syntax = "proto3";
package proto;

import "productMessage.proto";

option go_package = "github.com/ferza17/ecommerce-microservices-v2/api-gateway/model/rpc/pb";

service ProductService {
  rpc FindProductsWithPagination(FindProductsWithPaginationRequest) returns (FindProductsWithPaginationResponse);
  rpc FindProductById(FindProductByIdRequest) returns (Product);
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse);
  rpc UpdateProductById(UpdateProductByIdRequest) returns (Product);
  rpc DeleteProductById(DeleteProductByIdRequest) returns (DeleteProductByIdResponse);
}
